<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".implem.crous.ListeCrous">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/alice"
            android:text="Lieux de Restauration"
            android:textColor="#E40E1F"
            android:textSize="25sp" />

    </RelativeLayout>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="70dp"
        android:background="@color/white"
        android:columnWidth="150dp"
        android:gravity="center"
        android:horizontalSpacing="0dp"
        android:numColumns="auto_fit"
        android:stretchMode="spacingWidthUniform"
        android:verticalSpacing="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nothing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="97dp"
        android:layout_marginBottom="429dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/alice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gridView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="29dp"
        android:layout_height="33dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|end">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/MenuCrous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:src="@drawable/menucrous"
            app:backgroundTint="@color/colorPrimary" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|end">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/Geo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="80dp"
            android:clickable="true"
            android:src="@drawable/localisation"
            app:backgroundTint="@color/colorPrimary" />



    </RelativeLayout>



    <TextView
        android:layout_width="83dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/alice"
        android:text="Votes selon les étudiants"
        app:layout_constraintBottom_toTopOf="@+id/gridview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|end">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/sandwich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="150dp"
            android:clickable="true"
            android:src="@drawable/sandwich_logo"
            app:backgroundTint="@color/colorPrimary"  />



    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>